amends in the style.css file for index.html and band.html and real content added to band.html

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <!--link to bootstrap stylesheet-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
-  <title>The Monkees website</title>
+  
   <!-- My style sheet to update the original template-->
   <link rel="stylesheet" href="css/style.css" type="text/css" />
+  
+  <title>The Monkees website</title>
 </head>
 
 
 
 <body>
 
-  <header class="hight20-0 hidden-md hidden-lg">
+  <header class="hight20-0 visible-xs">
     <a href="theband.html"><img src="images/logo.png"></img></a>
   </header>
 
@@ -43,17 +45,14 @@
 
         <div class="item active">
           <!--overlay classes added to change the shade of each image in the carousel-->
-          <div class="overlay overlay1">&nbsp;</div>
           <img class="first-slide" src="images/photo1.jpg" alt="First slide">
         </div>
 
         <div class="item">
-          <div class="overlay overlay2">&nbsp;</div>
           <img class="second-slide" src="images/photo8b.jpg" alt="Second slide">
         </div>
 
         <div class="item">
-          <div class="overlay overlay3">&nbsp;</div>
           <img class="third-slide" src="images/photo9b.jpg" alt="Third slide">
         </div>
 
@@ -83,7 +82,7 @@
 
   <footer class="container-fluid hight20">
 
-    <div class="hidden-xs hidden-sm logo-md-lg">
+    <div class="hidden-xs logo-md-lg">
       <a href="theband.html">
         <div class="circle">
           <img src="images/logo.png"></img>
