--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <!----------LOGO------------->
 
                 <div class="col-xs-6 col-sm-2 logo">
-                    <a href="index.html"><img src="images/logo.png"></img></a>
+                    <a href="index.html"><img src="images/logo.png" alt="Monkees logo"></img></a>
                 </div>
 
 
@@ -192,7 +192,7 @@
                         <div class="col-xs-12">
                             <div class="media">
                                 <div class="media-left hidden-xs">
-                                    <img class="media-object img-thumbnail" src="images/opinion1.jpg" alt="opinion1" width="120">
+                                    <img class="media-object img-thumbnail" src="images/opinion1.jpg" alt="picture of couple in weeding" width="120">
                                 </div>
                                 <div class="media-body">
                                     <blockquote>
@@ -209,14 +209,14 @@
                                     </blockquote>
                                 </div>
                                 <div class="media-right hidden-xs">
-                                    <img class="media-object img-thumbnail" src="images/opinion2.jpg" alt="opinion2" width="120">
+                                    <img class="media-object img-thumbnail" src="images/opinion2.jpg" alt="picture of people in birthday" width="120">
                                 </div>
 
                             </div>
 
                             <div class="media">
                                 <div class="media-left hidden-xs">
-                                    <img class="media-object img-thumbnail" src="images/opinion3.jpg" alt="opinion3" width="120">
+                                    <img class="media-object img-thumbnail" src="images/opinion3.jpg" alt="picture of event" width="120">
                                 </div>
                                 <div class="media-body">
                                     <blockquote>
@@ -285,7 +285,7 @@
     </footer>
 
 
-    <!-- Modal -->
+  <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -297,26 +297,26 @@
 
                     <form>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="InputName" placeholder="Enter your name" required>
+                            <input type="text" name="name" class="form-control" id="InputName" placeholder="Enter your name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
+                            <input type="email" name="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
+                            <input type="password"  name="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="InputPassword2" placeholder="type your password again" required>
+                            <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="type your password again" required>
                         </div>
                         <div class="wrapper-check">
                             <div class="checkbox newsletter">
                                 <label>
-                                 <input type="checkbox"  checked> Subscribe me to the monthly newsletter.
-                            </label>
+                                 <input type="checkbox"  name="subscribe" checked> Subscribe me to the monthly newsletter.
+                                </label>
                             </div>
                             <div class="checkbox offers">
                                 <label>
-                                 <input type="checkbox" > Send emails with offers about concerts.
+                                 <input type="checkbox" name="offers"> Send emails with offers about concerts.
                             </label>
                             </div>
                         </div>
@@ -331,7 +331,6 @@
             </div>
         </div>
     </div>
-
 
 
 
