--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
-                                <li class="nav-item nav-item-menu"><a href="theband.html"><i class="fa fa-music hidden-xs"></i><span class="page">The Band</span> <span class="sr-only">(current)</span></a></li>
-                                <li class="nav-item nav-item-menu"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs"></i><span class="page">News</span></a></li>
-                                <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs"></i><span class="page">Listen</span></a></li>
-                                <li class="nav-item nav-item-menu active"><a href="contact.html"><i class="fa fa-comments hidden-xs"></i><span class="page">Contact</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="theband.html"><i class="fa fa-music hidden-xs" aria-hidden="true"></i><span class="page">The Band</span> <span class="sr-only">(current)</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs" aria-hidden="true"></i><span class="page">News</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs" aria-hidden="true"></i><span class="page">Listen</span></a></li>
+                                <li class="nav-item nav-item-menu active"><a href="contact.html"><i class="fa fa-comments hidden-xs" aria-hidden="true"></i><span class="page">Contact</span></a></li>
                                 <li class="nav-item subscribe"><a href="#" class="btn btn-success2" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
                             </ul>
 
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="media-body">
                                     <blockquote>
-                                        <p><i class="fa fa-quote-left"></i>The best present in our weeding day was to see the Monkees play live in our special day!<i class="fa fa-quote-right"></i></p>
+                                        <p><i class="fa fa-quote-left" aria-hidden="true"></i>The best present in our weeding day was to see the Monkees play live in our special day!<i class="fa fa-quote-right" aria-hidden="true"></i></p>
                                         <p>- Peter and Sarah</p>
                                     </blockquote>
                                 </div>
@@ -204,7 +204,7 @@
                             <div class="media">
                                 <div class="media-body">
                                     <blockquote>
-                                        <p><i class="fa fa-quote-left"></i>I have never seen my dad as happy as he was on his 70's bithday when he received the visit from the Monkees.<i class="fa fa-quote-right"></i></p>
+                                        <p><i class="fa fa-quote-left" aria-hidden="true"></i>I have never seen my dad as happy as he was on his 70's bithday when he received the visit from the Monkees.<i class="fa fa-quote-right" aria-hidden="true"></i></p>
                                         <p>- Nick</p>
                                     </blockquote>
                                 </div>
@@ -220,7 +220,7 @@
                                 </div>
                                 <div class="media-body">
                                     <blockquote>
-                                        <p><i class="fa fa-quote-left"></i>The Monkees played in our Christmas party and since then I can't stop playing their song over and over again :)<i class="fa fa-quote-right"></i></p>
+                                        <p><i class="fa fa-quote-left" aria-hidden="true"></i>The Monkees played in our Christmas party and since then I can't stop playing their song over and over again :)<i class="fa fa-quote-right" aria-hidden="true"></i></p>
                                         <p>- Marketing company</p>
                                     </blockquote>
                                 </div>
