--- a/news.html
+++ b/news.html
@@ -59,10 +59,10 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
-                                <li class="nav-item nav-item-menu"><a href="theband.html"><i class="fa fa-music hidden-xs"></i><span class="page">The Band</span> <span class="sr-only">(current)</span></a></li>
-                                <li class="nav-item nav-item-menu active"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs"></i><span class="page">News</span></a></li>
-                                <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs"></i><span class="page">Listen</span></a></li>
-                                <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs"></i><span class="page">Contact</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="theband.html"><i class="fa fa-music hidden-xs" aria-hidden="true"></i><span class="page">The Band</span> <span class="sr-only">(current)</span></a></li>
+                                <li class="nav-item nav-item-menu active"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs" aria-hidden="true"></i><span class="page">News</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs" aria-hidden="true"></i><span class="page">Listen</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs" aria-hidden="true"></i><span class="page">Contact</span></a></li>
                                 <li class="nav-item subscribe"><a href="#" class="btn btn-success2" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
                             </ul>
 
@@ -101,7 +101,7 @@
 
                                         </div>
                                         <div class="col-xs-5 concert-buy">
-                                            <h3><span class="label label-danger">Sold Out <i class="fa fa-frown-o"></i></span></h3>
+                                            <h3><span class="label label-danger">Sold Out <i class="fa fa-frown-o" aria-hidden="true"></i></span></h3>
                                         </div>
                                     </div>
 
@@ -438,7 +438,7 @@
                 </div>
                 <div class="modal-body">
 
-                    <p>Please enter below yourcontact detail to book your tickets for the concert.</p>
+                    <p>Please enter below your contact details to book your tickets for the concert.</p>
                     <p><span class="text-muted">You will receive an email with the details to complete the payment online.</span></p>
 
                     <form>
@@ -452,7 +452,7 @@
 
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-save">Subscribe</button>
+                            <button type="submit" class="btn btn-save">Book Now!</button>
                         </div>
                     </form>
 
