form fixed,  headers formating listen.html and band.html

--- a/contact.html
+++ b/contact.html
@@ -123,14 +123,14 @@
 
 
                         <div class="form-group">
-                            <label for="date" class="col-sm-2 control-label hidden-xs">Date:</label>
-                            <div class="col-sm-6 col-xs-12">
+                            <label for="date" class="col-sm-2 col-md-2 control-label hidden-xs">Date:</label>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <input class="form-control date" type="date" id="date" name="date">
                             </div>
 
 
-                            <label for="time" class="col-sm-1 control-label control-label-time hidden-xs">Time:</label>
-                            <div class="col-sm-3  col-xs-12">
+                            <label for="time" class="col-sm-1 col-md-3 control-label control-label-time hidden-xs">Time:</label>
+                            <div class="col-xs-12 col-sm-3  col-md-3">
                                 <select class="form-control time" name="time" id="time" required>
                                      <option disabled selected>Select the time</option>
                                     <option>12:00</option>
@@ -170,7 +170,7 @@
                             <div class="col-xs-12">
                                 <div class="wrapper-buttons">
                                     <input type="reset" class="btn btn-default btn-reset" value="Cancel">
-                                    <button type="submit" class="btn btn-default btn-lg btn-signin">Sign in</button>
+                                    <button type="submit" class="btn btn-default btn-lg btn-signin">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
                                 <div class="media-body">
                                     <blockquote>
                                         <p><i class="fa fa-quote-left" aria-hidden="true"></i>I have never seen my dad as happy as he was on his 70's bithday when he received the visit from the Monkees.<i class="fa fa-quote-right" aria-hidden="true"></i></p>
-                                        <p>- Nick</p>
+                                        <p class="lead">- Nick</p>
                                     </blockquote>
                                 </div>
                                 <div class="media-right hidden-xs">
