--- a/listen.html
+++ b/listen.html
@@ -26,6 +26,7 @@
     <!-- My style sheet to update the original template-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
+
     <title>The Monkees website</title>
 
 </head>
@@ -107,7 +108,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-album">
-                                        <h3>Christmas Party album (2018)</h3>
+                                        <h3 class="header-listen">Christmas Party album (2018)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -127,7 +128,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-album">
-                                        <h3>Good Times (2018)</h3>
+                                        <h3 class="header-listen">Good Times (2018)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -177,7 +178,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>Daydream Believer (1968)</h3>
+                                        <h3 class="header-listen">Daydream Believer (1968)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -204,7 +205,6 @@
                                 <div class="col-xs-12  buy-download-share share-buy">
 
                                     <a href="#"><i class="song-links fa fa-share-alt" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="song-links fa fa-shopping-cart" aria-hidden="true"></i></a>
                                 </div>
 
                             </div>
@@ -228,7 +228,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>I'm a Believer (1966)</h3>
+                                        <h3 class="header-listen">I'm a Believer (1966)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -254,7 +254,6 @@
                                 <div class="col-xs-12  buy-download-share share-buy">
 
                                     <a href="#"><i class="song-links fa fa-share-alt" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="song-links fa fa-shopping-cart" aria-hidden="true"></i></a>
                                 </div>
 
                             </div>
@@ -278,7 +277,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>Steppin' Stone (1967)</h3>
+                                        <h3 class="header-listen">Steppin' Stone (1967)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -304,7 +303,6 @@
                                 <div class="col-xs-12  buy-download-share share-buy">
 
                                     <a href="#"><i class="song-links fa fa-share-alt" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="song-links fa fa-shopping-cart" aria-hidden="true"></i></a>
                                 </div>
 
                             </div>
@@ -325,7 +323,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>Last Train to Clarksville (1966)</h3>
+                                        <h3 class="header-listen">Last Train to Clarksville (1966)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -351,7 +349,6 @@
                                 <div class="col-xs-12  buy-download-share share-buy">
 
                                     <a href="#"><i class="song-links fa fa-share-alt" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="song-links fa fa-shopping-cart" aria-hidden="true"></i></a>
                                 </div>
 
                             </div>
@@ -359,6 +356,7 @@
                     </div>
                 </div>
             </div>
+    </div>
     </section>
 
 
