--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
     </header>
 
-    <section class="container-fluid bg-section bg-section-contact">
+    <section class="container-fluid bg-section">
         <div class="wrapper-section">
 
             <div class="row">
@@ -321,8 +321,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-save">Subscribe</button>
+                            <button type="submit" class="btn btn-default btn-reset" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-signin">Subscribe</button>
                         </div>
                     </form>
 
