--- a/news.html
+++ b/news.html
@@ -80,7 +80,7 @@
 
     </header>
 
-    <section class="container-fluid bg-section bg-section-contact">
+    <section class="container-fluid bg-section">
         <div class="wrapper-section">
 
             <div class="row">
@@ -379,8 +379,9 @@
     </footer>
 
 
-    <!-- Modal -->
-   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+ 
+  <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -415,8 +416,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-save">Subscribe</button>
+                            <button type="submit" class="btn btn-default btn-reset" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-signin">Subscribe</button>
                         </div>
                     </form>
 
