--- a/theband.html
+++ b/theband.html
@@ -186,7 +186,7 @@
 
             <div class="row member-disco">
 
-                <div class="col-xs-12 col-lg-8 member-wrapper">
+                <div class="col-xs-12 col-lg-8">
 
                     <div class="row">
                         <div class="col-12-xs">
@@ -374,7 +374,7 @@
     </footer>
 
 
-    <!-- Modal -->
+  <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -392,7 +392,7 @@
                             <input type="email" name="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" name="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
+                            <input type="password"  name="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
                         </div>
                         <div class="form-group">
                             <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="type your password again" required>
@@ -410,8 +410,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-save">Subscribe</button>
+                            <button type="submit" class="btn btn-default btn-reset" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-signin">Subscribe</button>
                         </div>
                     </form>
 
@@ -420,7 +420,6 @@
             </div>
         </div>
     </div>
-
 
 
 
