--- a/indextest.html
+++ b/indextest.html
@@ -6,12 +6,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--link to bootstrap stylesheet-->
+   <!--link to bootstrap stylesheet-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
-
+  
   <!-- My style sheet to update the original template-->
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
-
+  <link rel="stylesheet" href="css/styletest.css" type="text/css" />
+  
   <title>The Monkees website</title>
 </head>
 
@@ -90,12 +90,11 @@
       </a>
     </div>
 
-
-    <div class="wrapper-enter">
-      <p><a class="uppercased" href="theband.html">Enter</a></p>
-    </div>
-
-
+    
+      <div class="wrapper-enter">
+        <p><a class="uppercased enter" href="theband.html">Enter</a></p>
+      </div>
+    
 
 
   </footer>
@@ -104,13 +103,13 @@
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!--  JQuery-->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  <!--Bootstrap (JS file)-->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <!--Bootstrap (JS file)-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
 
-  <!-- Placed at the end of the document so the pages load faster
+    <!-- Placed at the end of the document so the pages load faster
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>        window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')    </script>
     <script src="js/bootstrap.min.js"></script>
